Fix OpenApi description
